# radare2-r2papi

./: .gitignore  .travis.yml  README.md
.github/workflows/: gh-pages.yml  python.yml  rust.yml  typescript.yml
nim/: Makefile  main.nim  r2papi.nim
pascal/: Makefile  README.md  hello.pas
playground/asan/: Makefile  README.md  asan.ts  crash.txt  package.json  tsconfig.json
python/: .gitignore  Makefile  README.md  pyproject.toml  requirements_ci.txt  setup.py  test.py
python/docs/: api.rst  conf.py  development.rst  index.rst
python/r2api/: __init__.py  base.py  binary.py  config.py  debugger.py  esil.py  file.py  flags.py  iomap.py  print.py  r2api.py  utils.py  write.py
python/r2papi/: __init__.py  base.py  config.py  debugger.py  esil.py  file.py  flags.py  iomap.py  print.py  r2api.py  search.py  write.py
python/test/: Makefile  minimum.py  test.c  test_base.py  test_bin  test_config.py  test_debugger.py  test_esil.py  test_file.py  test_flags.py  test_iomap.py  test_print.py  test_r2api.py  test_search.py  test_write.py
rust/: .gitignore  Cargo.toml  Makefile  README.md
rust/examples/: analysis_example.rs  api_example.rs
rust/src/: api.rs  api_trait.rs  lib.rs  structs.rs
scripts/: install_radare2.sh
types/: Makefile  index.ts  package-lock.json  package.json  r2pipe.d.ts
typescript/: .eslintrc.json  .prettierrc  Makefile  README.md  ai.ts  base64.ts  esil.ts  graph.ts  index.ts  minimal-skeleton.r2.js  package-lock.json  package.json  pdq.ts  r2papi.ts  r2pipe.d.ts  r2pipe.ts  shell.ts  test.ts  tsconfig.json
typescript/async/: ai.ts  base64.ts  elang.ts  esil.ts  graph.ts  index.ts  opt.ts  pdq.ts  r2frida.ts  r2papi.ts  r2pipe.ts  shell.ts  tsconfig.json
typescript/examples/: Makefile  draft-shell.qjs  main.ts  test.ts
typescript/examples/asm/: Makefile  index.js  main.js  package.json
typescript/examples/project/: Makefile  index.ts  package.json  r2pipe.d.ts  shell.d.ts  shell.ts  tsconfig.json
typescript/examples/r2f-pkg/: Makefile  index.ts  world.ts  (+1 more)
typescript/orig/: ai.ts  index.ts  r2papi.ts
typescript/sync/: README.md
typescript/tools/: asyncify.py  jsts.ts  tsi.sh
webdocs/: Makefile
webdocs/public/: index.html  style.css
(+3 files in other folders)
